<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Secure Camera</string>
    <string name="author_text_lbl">by Tomasz P. Musielak</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="base_station_auth">Base station</string>
    <string name="base_station_auth_summary">Enforce logging at base station before taking pictures</string>
    <string name="auth_features">Authentication features</string>
    <string name="other_features">Other features</string>
    <string name="preferences">Preferences</string>
    <string name="auth_button_lbl">Authenticate</string>
    <string name="take_images_lbl">Take images</string>
    <string name="export_images">Export images</string>
    <string name="view_images_lbl">View images</string>
    <string name="use_autofocus">Use autofocus</string>
    <string name="use_autofocus_summary">Use autofocus while taking pictures</string>
    <string name="authentication">Base authentication</string>
    <string name="msg_authenticating_wait">Authenticating. Please wait…</string>
    <string name="msg_authenticating_ok">Authentication with base station %1$s successful</string>
    <string name="msg_authenticating_failed">Failed to authenticate with base station %1$s:\n%2$s</string>
    <string name="msg_autheticated">Authenticated</string>
    <string name="take_picture">Shoot</string>
    <string name="pref_summary_base_station_address">Address of the base station to connect to</string>
    <string name="pref_caption_base_station_address">Base station address</string>
    <string name="kpref_base_station_logging">Base station logging</string>
    <string name="kpref_base_station_address">Base station address</string>
    <string name="kpref_use_autofocus">Use autofocus</string>
    <string name="kpref_base_station_username">Base station username</string>
    <string name="pref_caption_base_station_username">User name</string>
    <string name="pref_summary_base_station_username">User name to use with base station</string>
    <string name="camera_image_roll">FilmRoll</string>
    <string name="camera_image_single">SingleImage</string>
    <string name="verification_factors">Verification factors</string>
    <string name="pick_vfactor">Pick verifiers</string>
    <string name="verifier_settings">Verifier settings</string>
    <string name="no_files_found">No files found</string>
    <string name="image_view">View of the image</string>
    <string name="no_verifiers_found">No verifiers found</string>
    <string name="debug_create_SPIroll">Create SPI Roll</string>
    <string name="delete">Delete</string>
    <string name="view_info">View info</string>
    <string name="ask_confirm">Are you sure?</string>
    <string name="delete_success">File deleted</string>
    <string name="delete_failure">Warning: file not deleted</string>
    <string name="cannot_use_handler">Cannot use this handler</string>
    <string name="last_frame">You are at the last frame</string>
    <string name="first_frame">You are at the first frame</string>
    <string name="image_saved_successfully">Image %1$s saved successfully"</string>
    <string name="error_saving_image">Error while saving image: %1$s</string>
    <string name="base_station_address_not_set">The base station address is not set</string>
</resources>
